# personal-website

./: .editorconfig  .env  .env.template  .gitignore  404.html  CNAME  Caddyfile  Compilers.hs  Contexts.hs  Gemfile  Makefile  PandocFilterGraphviz.hs  Pipfile  Procfile  README.md  Readme.md  _config.yml  blog.py  bower.json  circle.yml  create_post  gulpfile.js  index.html  manage.py  netlify.toml  new-blog.cabal  package-lock.json  package.json  personal-website.cabal  playbook.yaml  render_blog.py  render_blog_index.py  render_page.py  render_site.py  requirements.txt  runserver.py  site.hs  spell_check  stack.yaml  supervisord.conf  (+1 more)
.circleci/: config.yml
_drafts/: 2016-06-04.md  2019-03-05-how-to-fail.md  2019-07-03-project-patterns.md  2019-07-04-hakyll-on-netlify.md
_includes/: footer.html  nav.html
_layouts/: default.html  post.html
_posts/: 2015-09-10-post.md  2015-09-11-post.md  2015-09-17-post.md  2015-10-08-post.md  2015-10-17-post.md  2015-10-25-post.md  2015-11-01-post.md  2015-11-08-post.md  2015-11-15-post.md  2015-11-22-post.md  2015-11-30-post.md  2015-12-06-post.md  2016-04-25-post.md  2016-06-04-post.md  2016-06-15-post.md  2017-06-30-post.md  2017-07-05-post.md  2017-12-23-pandas-dask-group-by.md  2017-12-26-pandas-aggregates.md  2017-12-29-pandas-transform.md  2018-01-06-effective-notebooks.md  2018-02-23-pandas-category.md  2018-03-02-data-science-project-planning.md  2018-03-09-designing-analytics-beacon.md  2018-03-20-anatomy-token-platform.md  2018-04-06-3-useful-code-patterns.md  2018-04-13-erc-20-token-allowance.md  (+3 more)
blog/: 2015-09-10.md  (+20 more)
(+133 files in other folders)
