name:               personal-website
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:
    PandocFilterGraphviz
    Compilers
    Contexts
  build-depends:    base == 4.*
                  , hakyll >= 4
                  , base16-bytestring
                  , byteable
                  , bytestring
                  , containers
                  , cryptonite
                  , directory
                  , doctemplates
                  , filepath
                  , pandoc
                  , pandoc-types
                  , process
                  , text
  ghc-options:      -threaded -Wall -Werror
  default-language: Haskell2010
